# di_single_container

./: README.md  main.py  pyproject.toml
di_single_container/: container.py  database.py  tasks.py
